--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -205,10 +205,10 @@ body {
         z-index: -1;
         }
     &__cucumber {
-        left: 2680px;
+        left: 680px;
         position: absolute;
         top: 0px;
-        width: 9rem;
+        width: 8.5rem;
         z-index: -1;
         } 
     &__beans {
@@ -220,162 +220,162 @@ body {
         } 
     }
 
-.title {
-    font-family: $font-cormorant;
-    font-weight: 700;
-    font-size: 8rem;
-    margin: 0;  
-    &__span {
-        font-style: italic;
-    }
-    &_block {
-        .title__span {
-            display: block;
+    .title {
+        font-family: $font-cormorant;
+        font-weight: 700;
+        font-size: 8rem;
+        margin: 0;  
+        &__span {
+            font-style: italic;
         }
-    }
-}
-.description {
-    margin: 0;
-    line-height: 1.5;
-    &_size-s {
-        font-size: 1.8rem;
-    }
-    &_size-m {
-        font-size: 2.4rem;
-    }
-}
-.link {
-    color: $white;
-    letter-spacing: 0.13rem;
-    text-transform: uppercase;
-    padding: 2.4rem 4.3rem;
-    background-color: $orange;
-    box-shadow: 0px 1rem 1.1rem .2rem rgba(207, 92, 13, 0.2);
-    text-decoration: none;
-    border-radius: 3.8rem;
-    display: inline-block;    
-}
-
-.offer {
-    background-image: url(../images/offer.png);
-    background-size: cover;
-    background-position-x: center;
-    background-repeat: no-repeat;
-    padding-top: 2rem;
-    padding-bottom: 12.8rem;
-    &__text {
-        margin-top: 6rem;
-        max-width: 700px;
-    }
-    &__slider {
-        overflow: hidden;
-        padding-top: 9.4rem;
-    }
-}
-.swiper {
-    overflow: initial;
-    &-slide {
-        border: 1px solid rgba($green, 0.4);
-        border-radius: 2rem;
-        padding: 4rem 3.7rem;
-        box-sizing: border-box;
-        height: 520px;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        background-repeat: no-repeat;
-        block-size: cover;
-        position: relative;        
-        z-index: 0;
-        &:hover {
-            box-shadow: 0 0 0 2px rgba($green, 0.4) inset;
-            .swiper-slide__hover {
-                height: 233px;
-                opacity: 1;
-            }
-            &::after {
-                content: " ";
-                background-color: rgba($white, .55);
-                width: calc(100% - 4px);
-                height: calc(100% - 4px);
-                position: absolute;
-                top: 2px;
-                left: 2px;
-                border-radius: 2rem;
-                z-index: -1;       
-            }
-        }
-        &_milk {
-            background-image: url(../images/milk.png);
-        }
-        &_pasta {
-            background-image: url(../images/pasta.png);
-        }
-        &_steaks {
-            background-image: url(../images/steaks.png);
-        }
-        &__title {
-            font-family: $font-cormorant;
-            font-size: 3rem;
-            color: $green;
-            margin-bottom: 0;
-        }
-        &__hover {
-            height: 0;
-            opacity: 0;
-        }
-        &__text {
-            color: rgba($green, 0.7);
-            line-height: 1.5;
-            margin-bottom: 3.4rem;
-            margin-top: 2.5rem;
-            max-width: 263px;
-        }
-        &__link {
-            text-transform: uppercase;
-            font-weight: 500;
-            color: rgba($green, 0.8);
-            text-decoration: none;
-            display: flex;
-            align-items: center;
-            gap: 2rem;
-            letter-spacing: 0.1rem;
-            &::before {
-                content: "";
+        &_block {
+            .title__span {
                 display: block;
-                width: 3rem;
-                background-image: url(../images/plus.svg);
-                background-size: cover;
-                background-repeat: no-repeat;
-                opacity: .8;
-                &:hover {
+            }
+        }
+    }
+    .description {
+        margin: 0;
+        line-height: 1.5;
+        &_size-s {
+            font-size: 1.8rem;
+        }
+        &_size-m {
+            font-size: 2.4rem;
+        }
+    }
+    .link {
+        color: $white;
+        letter-spacing: 0.13rem;
+        text-transform: uppercase;
+        padding: 2.4rem 4.3rem;
+        background-color: $orange;
+        box-shadow: 0px 1rem 1.1rem .2rem rgba(207, 92, 13, 0.2);
+        text-decoration: none;
+        border-radius: 3.8rem;
+        display: inline-block;    
+    }
+
+    .offer {
+        background-image: url(../images/offer.png);
+        background-size: cover;
+        background-position-x: center;
+        background-repeat: no-repeat;
+        padding-top: 2rem;
+        padding-bottom: 12.8rem;
+        &__text {
+            margin-top: 6rem;
+            max-width: 700px;
+        }
+        &__slider {
+            overflow: hidden;
+            padding-top: 9.4rem;
+        }
+    }
+    .swiper {
+        overflow: initial;
+        &-slide {
+            border: 1px solid rgba($green, 0.4);
+            border-radius: 2rem;
+            padding: 4rem 3.7rem;
+            box-sizing: border-box;
+            height: 520px;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            background-repeat: no-repeat;
+            block-size: cover;
+            position: relative;        
+            z-index: 0;
+            &:hover {
+                box-shadow: 0 0 0 2px rgba($green, 0.4) inset;
+                .swiper-slide__hover {
+                    height: 233px;
                     opacity: 1;
                 }
+                &::after {
+                    content: "";
+                    background-color: rgba($white, .55);
+                    width: calc(100% - 4px);
+                    height: calc(100% - 4px);
+                    position: absolute;
+                    top: 2px;
+                    left: 2px;
+                    border-radius: 2rem;
+                    z-index: -1;       
+                }           
+            }                         
+            &_milk {
+                background-image: url(../images/milk.png);
             }
-
-        }
-    }
-
-    &-pagination {
-        display: none;
-    }
-    &-button-next, &-button-prev {
-        top: -60px;
-        &:hover {
-            &::after {
-                color: rgba($green, 1);
+            &_pasta {
+                background-image: url(../images/pasta.png);
+            }
+            &_steaks {
+                background-image: url(../images/steaks.png);
+            }
+            &__title {
+                font-family: $font-cormorant;
+                font-size: 3rem;
+                color: $green;
+                margin-bottom: 0;
+            }
+            &__hover {
+                height: 0;
+                opacity: 0;
+            }
+            &__text {
+                color: rgba($green, 0.7);
+                line-height: 1.5;
+                margin-bottom: 3.4rem;
+                margin-top: 2.5rem;
+                max-width: 263px;
+            }
+            &__link {
+                text-transform: uppercase;
+                font-weight: 500;
+                color: rgba($green, 0.8);
+                text-decoration: none;
+                display: flex;
+                align-items: center;
+                gap: 2rem;
+                letter-spacing: 0.1rem;
+                &::before {
+                    content: "";
+                    display: block;
+                    width: 3rem;
+                    height: 3rem;
+                    background-image: url(../images/plus.svg);
+                    background-size: cover;
+                    background-repeat: no-repeat;
+                    opacity: .8;
+                    &:hover {
+                        opacity: 1;
+                    }
+                }
             }
         }
-        &::after {
-            color: rgba($green, .4);
-            font-size: 20px;
-        }   
-    }
-    &-button-next {
-        right: -8px;
-    }
-    &-button-prev {
-        left: initial;
-        right: 72px;
-    }
-}
+        
+        &-pagination {
+            display: none;
+           }
+        &-button-next, &-button-prev {
+                top: -60px;
+                &:hover {
+                    &::after {
+                        color: rgba($green, 1);
+                    }
+                }
+                &::after {
+                    color: rgba($green, .4);
+                    font-size: 20px;
+                }   
+            }
+        &-button-next {
+                right: -8px;
+            }
+        &-button-prev {
+                left: initial;
+                right: 72px;
+            }        
+        }
