--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -137,7 +137,7 @@ body {
         position: absolute;
         color: $green;
         text-align: left;
-         &:hover {
+        &:hover {
              .main__btn {
                  &::before {
                       background-color: $orange;
@@ -265,11 +265,11 @@ body {
     &__text {
         margin-top: 6rem;
          max-width: 700px;
-    }
-    &__slider {
-        overflow: hidden;
-        padding-top: 9.4rem;
-    }
+    }    
+}
+.slider {
+    overflow: hidden;
+    padding-top: 9.4rem;
 }
 .swiper {
     overflow: initial;
@@ -281,30 +281,35 @@ body {
         height: 520px;
         display: flex;
         flex-direction: column;
-        justify-content: flex-end;
+        justify-content: space-between;
         background-repeat: no-repeat;
         block-size: cover;
         position: relative;        
         z-index: 0;
-        &:hover {
-            box-shadow: 0 0 0 2px rgba($green, 0.4) inset;
-            .swiper-slide__hover {
-                height: 233px;
-                opacity: 1;
+        &_white {
+            justify-content: flex-end;
+            &:hover {
+                .swiper-slide__hover {
+                    height: 233px;
+                    opacity: 1;
+                }
+                &::after {
+                    content: "";
+                    background-color: rgba($white, .55);
+                    width: calc(100% - 4px);
+                    height: calc(100% - 4px);
+                    position: absolute;
+                    top: 2px;
+                    left: 2px;
+                    border-radius: 2rem;
+                    z-index: -1;       
+                }
             }
-            &::after {
-                content: "";
-                background-color: rgba($white, .55);
-                width: calc(100% - 4px);
-                height: calc(100% - 4px);
-                position: absolute;
-                top: 2px;
-                left: 2px;
-                border-radius: 2rem;
-                z-index: -1;       
-            }
+
         }
-                                    
+        &:hover {
+            box-shadow: 0 0 0 2px rgba($green, 0.4) inset;            
+        }                                    
         &_milk {
             background-image: url(../images/milk.png);
         }
@@ -318,7 +323,7 @@ body {
             font-family: $font-cormorant;
             font-size: 3rem;
             color: $green;
-            margin-bottom: 0;
+            margin-bottom: 0rem;
         }
         &__hover {
             height: 0;
@@ -334,12 +339,13 @@ body {
         &__link {
             text-transform: uppercase;
             font-weight: 500;
-            color: rgba($green, 0.8);
+            color: $green;            
             text-decoration: none;
             display: flex;
             align-items: center;
             gap: 2rem;
             letter-spacing: 0.1rem;
+            opacity: .8;            
             &::before {
                 content: '';
                 display: block;
@@ -347,42 +353,91 @@ body {
                 height: 3rem;
                 background-image: url(../images/plus.svg);
                 background-size: cover;
-                background-repeat: no-repeat;
-                opacity: .8;
-                    &:hover {
-                        opacity: 1;
-                    }
-                }
+                background-repeat: no-repeat;                            
             }
-        
-                      
-        &-pagination {
-            display: none;
-           }
-        &-button-next, &-button-prev {
-                top: -60px;
-                &:hover {
-                    &::after {
-                        color: rgba($green, 1);
-                    }
-                }
-                &::after {
-                    color: rgba($green, .4);
-                    font-size: 20px;
-                }   
+            &:hover {
+                opacity: 1;
+            }                
+        }
+    
+        &__cover {
+            position: relative;
+            overflow: hidden;
+            width: 100%;
+            height: 293px;            
+            text-align: center;
+        }
+        &__image {            
+            height: 293px;
+        }
+        &__footer {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }  
+    }                     
+    &-pagination {
+        display: none;
+    }
+    &-button-next, &-button-prev {
+        top: -60px;
+        &:hover {
+            &::after {
+                color: rgba($green, 1);
             }
-        &-button-next {
-                right: -8px;
-            }
-        &-button-prev {
-                left: initial;
-                right: 72px;
-            }        
+        }
+        &::after {
+            color: rgba($green, .4);
+            font-size: 20px;
         }
     }
+    &-button-next {
+        right: -8px;
+    }
+    &-button-prev {
+        left: initial;
+        right: 72px;
+    }  
+}  
+
+.counter {
+    display: flex;
+    &__btn {
+        cursor: pointer;
+        width: 5rem;
+        height: 5rem;
+        border: 1px solid $green;
+        background-color: transparent;
+        padding: 0;
+        background-position: center center;
+        border-radius: 100%;
+    }
+    &__minus {
+        pointer-events: none;
+        background-image: url(../images/catalog/minus-counter.svg);
+        background-size: 20px 11px;
+        background-repeat: no-repeat; 
+        opacity: .4;       
+    }
+    &__plus {
+        pointer-events: none;       
+        background-image: url(../images/catalog/plus-counter.svg);
+        background-size: 20px 11px;
+        background-repeat: no-repeat;              
+    }
+    &__input {
+       text-align: center;       
+       font-size: 2.4rem;
+        width: 46px;
+        border: none;
+        padding: 0;
+    }
+}
 
 
 .about {
+    padding-top: 37px;
+    padding-bottom: 100px;
     &__box {
         display: flex;
         justify-content: space-between;
@@ -393,8 +448,7 @@ body {
         margin-left: 12rem;
         flex-basis: 620px;
     }
-    &__list {
-        padding-left: 0;
+    &__list {        
         list-style: none;
         display: flex;
         gap: 9rem;
@@ -402,12 +456,13 @@ body {
         font-style: italic;
         font-size: 3rem;
         margin: 0;
+        padding-left: 0;
     }
     &__item {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
+        align-items: center;      
         &::before {
             content: '';
             width: 84px;
@@ -417,15 +472,13 @@ body {
             border: 1px solid rgba($green, 0.4);
             border-radius: 100%;
             margin-bottom: 1.5rem;
-        }
-        
+        }        
         &:nth-child(1) {
             &::before {
                 background-image: url(../images/about_1.svg);
                 background-size: 44px 41px;
             }
-        }
-        
+        }            
         &:nth-child(2) {
             &::before {
                 background-image: url(../images/about_2.svg);
@@ -438,5 +491,6 @@ body {
                 background-size: 45px 39px;
             }
         }
-    }
+    }        
 }
+
