--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -542,7 +542,7 @@ body {
 }
 
 .catalog {
-    margin-top: 21rem;
+    margin-top: 19rem;
     &__list {
         margin-top: 8.5rem;
         margin-bottom: 5rem;
@@ -650,27 +650,102 @@ body {
 }
 
 .catalog-btn {
+    background-color: transparent;
+    border: none;
+    padding: 0;
     text-transform: uppercase;
     font-weight: 500;
     color: #27300f;
     text-decoration: none;
     display: flex;
     align-items: center;
-    gap: 2rem;
+    gap: 1.5rem;
     letter-spacing: 0.1rem;
+    margin: 0 auto;
+    margin-top: 6rem;
     &::before {
         content: "";
         display: block;
-        width: 3rem;
-        height: 3rem;
+        width: 2.5rem;
+        height: 2.5rem;
         background-image: url(../images/refresh.svg);
         background-size: cover;
         background-repeat: no-repeat;
     }
 }
 
-.contact {
+.deliveri {
     padding-top: 100px;
+    padding-bottom: 100px;
+    &__box {
+        line-height: 1.5;
+        display: flex;
+        margin-top: 7.6rem;
+        margin-left: 12rem;
+        gap: 12%;
+    }
+    &__text {
+        flex-basis: 44%;        
+    }
+    &__description {
+        padding-bottom: 2.6rem; 
+    }
+    &__pay {
+        flex-basis: 37%;
+    }
+    &__link {
+        color: #27300f;
+        text-decoration: none;        
+        position: relative;
+        cursor: pointer;
+        &::after {
+            content: "";
+            width: 100%;
+            height: 1px;
+            background-color: #858881;
+            display: block;
+            position: absolute;
+            left: 0;
+            bottom: 3px;
+        }
+    }
+    &__color {
+        color: $orange;
+    }
+    &__list {
+        list-style-type: none;
+        padding-left: 0;
+        display: flex;
+        gap: 3rem;
+        margin-top: 4.3rem;
+    }
+    &__item {
+        height: 32px;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center center;
+        opacity: 0.4; 
+        &:hover {
+            opacity: 1;
+            cursor: pointer;
+        }
+    }
+    &__mastercard {
+        width: 53px;
+        background-image: url(../images/mastercard.svg);
+    }
+    &__visa {
+        width: 74px;
+        background-image: url(../images/visa.svg);
+    }
+    &__paypal {
+        width: 87px;
+        background-image: url(../images/paypal.svg);
+    }
+}
+
+.contact {
+    padding-top: 88px;
     padding-bottom: 100px;
     &-box {
         display: flex;
@@ -679,10 +754,51 @@ body {
         &__text {
             max-width: 400px;
             flex-grow: 1;
+            margin-top: 6rem;
+            margin-left: 12rem;
         }
         &__form {
             flex-basis: 589px;
         }
+        
+        &__description {
+            margin-bottom: 2.6rem;
+        }
+        &__list {
+            list-style-type: none;
+            padding-left: 0px;
+            margin-top: 6rem;
+        }
+        &__link {
+            font-size: 2.4rem;
+            color: #27300f;
+            text-decoration: none;
+            font-weight: 500;
+            display: flex;
+            align-items: center;
+            gap: 3rem;
+            margin-bottom: 1.8rem;
+            &::before {
+                content: "";
+                background-repeat: no-repeat;
+                background-position: center center;
+                width: 29px;
+                height: 30px;
+                display: block;
+            }
+        }
+        &__tel {
+            &::before {
+            background-image: url(../images/phone.svg);
+            background-size: 29px 30px;
+            }
+        }
+        &__mail {
+            &::before {
+            background-image: url(../images/mail.svg);
+            background-size: 29px 30px;
+            }
+        }   
     }
 }
 .card {
