--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,7 +20,7 @@ $r_desc_1120: 1120px;
 $r_desc_hd: 1200px;
 $r_desc_1280: 1280px;
 $r_desc_1350: 1350px;
-$r_desc_f: 1700px;
+$r_desc_full_1750: 1750px;
 
 html {
     font-size: 10px;
@@ -79,10 +79,10 @@ body {
         text-decoration: none;           
         color: $green;
         font-weight: 500;
-        flex-basis: 200px;
-        letter-spacing: 1.3px;
+        flex-basis: 160px;
+        letter-spacing: .13rem;
         transition: .3s;
-        text-align: right;
+        text-align: right;        
         &:hover {
             color: $orange;
         }
@@ -205,7 +205,7 @@ body {
 }
 .main {
     position: relative;
-    padding-bottom: 148px;
+    padding-bottom: 187px;
     z-index: 0;
     &__item {
         margin-left: 12rem;
@@ -295,6 +295,7 @@ body {
         @media (max-width: $r_tab) {
             display: block;
             max-width: 300px;
+            border-radius: 100%;
             margin: 0 auto;
             margin-top: 3rem;
             animation: shadow 5s linear infinite;
@@ -316,6 +317,7 @@ body {
         position: absolute;
         color: $green;
         text-align: left;
+        z-index: 100;
         &:hover {            
             &::before {
                 background-color: $orange;
@@ -386,41 +388,49 @@ body {
     &__food {
         display: block;
         color: rgba($green, 0.8);
+        margin-bottom: 0.5rem;
     }
     &__tomato {
         position: absolute;
-        top: 856px;
-        right: 110px;
+        bottom: 113px;
+        right: 0px;
         width: 11rem;
         z-index: -1;
-
         }    
     &__avocado {
         position: absolute;
-        top: 60px;
-        right: 24px;
+        top: 56px;
+        right: 20px;
         width: 14rem;
         z-index: -1;
+        @media (max-width: 1750px) {
+            top: 120px;
+            width: 9.8rem;
+            right: -50px;
+            }
         }
     &__pepper {
-        left: 29px;
         position: absolute;
-        top: 412px;
-        width: 9rem;
+        top: 397px;
+        left: 20px;
+        width: 8.6rem;
         z-index: -1;
+            @media (max-width: $r_desc_full_1750) {
+            display: none;
+            }
         }
-    &__cucumber {
-        left: 680px;
+    &__cucumber {        
         position: absolute;
         top: 0px;
+        left: 34%;
         width: 8.5rem;
         z-index: -1;
         } 
-    &__beans {
-        left: 0px;
+    &__beans {        
         position: absolute;
-        top: 803px;
-        width: 10rem;
+        left: 0px;
+        bottom: 162px;
+        width: 10.5rem;
         z-index: -1;
         } 
     }
@@ -505,7 +515,13 @@ body {
 
 .slider {
     overflow: hidden;
-    padding-top: 9.4rem;
+    padding-top: 9.4rem;    
+        @media (max-width: $r_tab) {
+            max-width: 450px;
+            margin: 0 auto;
+            padding-top: 5.4rem;
+            padding-bottom: 6rem;
+        }
     }
 
 .swiper {
@@ -516,7 +532,7 @@ body {
         padding: 3rem 3.7rem 3.8rem;
         box-sizing: border-box;
         background-repeat: no-repeat;
-        block-size: cover;
+        background-size: cover;
         position: relative;        
         z-index: 0;
         &_white {
@@ -525,6 +541,10 @@ body {
             flex-direction: column;
             justify-content: flex-end;
             padding: 4rem 3.7rem;
+            background-size: contain;
+            @media (max-width: $r_desc_hd) {
+                height: 400px;
+            }
             &:hover {
                 .swiper-slide__hover {
                     height: 233px;
@@ -631,9 +651,21 @@ body {
                    
     &-pagination {
         display: none;
+        @media (max-width: $r_tab) {
+            display: block;
+        }
     }
+    &-pagination-bullets {
+        @media (max-width: $r_tab) {
+            display: block;
+        }
+    }
+
     &-button-next, &-button-prev {                
         top: -60px;
+        @media (max-width: $r_tab) {
+            display: none;
+        }
         &:hover {
             &::after {
                 color: rgba($green, 1);
@@ -652,6 +684,20 @@ body {
         right: 72px;
     }  
 } 
+.swiper-horizontal>.swiper-pagination-bullets {
+    bottom: -50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.swiper-pagination-bullet {
+    background: $dark-orange;
+    border: 1px solid $dark-orange;
+}
+.swiper-pagination-bullet {
+    width: 8px;
+    height: 8px;
+}
 
 .counter {
     display: flex;
@@ -712,6 +758,17 @@ body {
     &__text {
         margin-left: 12rem;
         flex-basis: 620px;
+        @media (max-width: $r_desc_1280) {
+            margin-left: 8rem;
+        }
+        @media (max-width: $r_desc_1120) {
+            margin-left: 4rem;
+        }
+        @media (max-width: $r_tab) {
+            max-width: 100%;
+            margin-left: 0;
+            margin-top: 3rem;
+        }
     }
     &__list {        
         list-style: none;
@@ -1084,11 +1141,6 @@ footer {
 }
 
 .footer {
-    /*background-image: url(../images/footer.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;*/
-
     &__box {
         display: flex;
         justify-content: space-between;
@@ -1113,7 +1165,6 @@ footer {
         text-decoration: none;
         color: $green;            
     }
-
     &__contact {
         margin-top: 1rem;                
     }
@@ -1133,8 +1184,7 @@ footer {
         justify-content: space-between;
         font-size: 1.6rem;
         color: rgba($green, .6);
-        margin-top: 4rem;
-        margin-bottom: 85px;
+        margin-top: 4rem;        
         p {
             display: block;
         }
@@ -1148,8 +1198,6 @@ footer {
         }
     }    
 }
-
-
 .footer-social {
     list-style-type: none;
     display: flex;
