--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@ $font-jost: 'Jost', sans-serif;
 $font-cormorant: 'Cormorant', serif;
 
 $r_minmob: 320px;
+$r_mob_330: 330px;
 $r_mob_360: 360px;
 $r_mob_400: 400px;
 $r_mob_500: 500px;
@@ -688,9 +689,8 @@ body {
             opacity: 0;
             @media (max-width: $r_mob_500) {
                 height: auto;
-                opacity: 1;
-                
-            }
+                opacity: 1;                
+            }            
         }
         &__text {
             color: rgba($green, 0.7);
@@ -1018,17 +1018,48 @@ body {
         text-decoration: none;
         border-radius: 4rem;
         display: block;
-        @media (max-width: $r_tab) {
-            font-size: 1.4rem;
-            padding: 1.8rem 0;
-        }
+        transition: .3s;
         &:hover {
             border: 1px solid $orange;
             color: $orange;
         }
+        @media (max-width: $r_tab) {
+            font-size: 1.4rem;
+            padding: 1.8rem 0;
+        }
     }
 }
-
+.category-swiper {
+    display: none;
+    @media (max-width: $r_mob_500) {
+        display: block;
+        text-align: center;        
+    }
+    &__link {
+        padding: 2.4rem 0;
+        border: 1px solid rgba($green, .5);
+        color: rgba($green, .5);
+        font-size: 1.8rem;
+        text-decoration: none;
+        border-radius: 4rem;
+        display: block;
+        transition: .3s;
+        &:hover {
+            border: 1px solid $orange;
+            color: $orange;
+            box-shadow: none;
+        }
+        @media (max-width: $r_mob_500) {
+            font-size: 1.6rem; 
+            flex-basis: 140px;       
+        } 
+        @media (max-width: $r_mob_360) {
+            font-size: 1.25rem;
+            padding: 10.7rem 0; 
+            flex-basis: 110px;       
+        }
+    }     
+}
 .catalog-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -1262,14 +1293,23 @@ body {
         }
         &__form {
             flex-basis: 589px;
-            @media (max-width: $r_desc) {
+            @media (max-width: $r_desc_hd) {
                 flex-basis: auto;
                 flex-grow: 1;
             }
-        }
-        
+            @media (max-width: $r_mob_500) {
+                text-align: center;
+            }
+            @media (max-width: $r_mob_330) {
+                margin-top: 5.7rem;
+            }
+        }        
         &__description {
-            margin-bottom: 2.6rem;            
+            font-size: 1.8rem;
+            line-height: 1.5;
+            @media (max-width: $r_mob_360) {
+                font-size: 1.5rem;
+            }           
         }
         &__list {
             list-style-type: none;
@@ -1281,6 +1321,26 @@ body {
                 font-size: 1.6rem;
                 display: flex;
                 justify-content: space-between;
+            }
+            @media (max-width: $r_mob_360) {
+                margin-top: 2rem;
+                font-size: 1.5rem;
+            }
+            @media (max-width: $r_mob_330) {
+                flex-direction: column;
+                align-items: center;
+            }
+        }
+        &__item {
+            margin-bottom: 2rem;
+            @media (max-width: $r_mob_360) {
+                margin-bottom: 3.5rem;
+            }
+            @media (max-width: $r_mob_330) {
+                margin-bottom: 1.5rem;
+            }
+            &:last-child {
+                margin-bottom: 0;
             }
         }
         &__link {
@@ -1334,6 +1394,12 @@ body {
         margin-bottom: 1rem;
         display: block;
         margin-left: 6px;
+        @media (max-width: $r_mob_500) {
+            text-align: left;
+        }
+        @media (max-width: $r_mob_360) {
+            margin-bottom: 0.6rem;
+        }
     }
     &__input {
         border: 1px solid rgba($green, 0.4);
@@ -1502,18 +1568,31 @@ footer {
         &:hover {
             opacity: 1;
         }
+        @media (max-width: $r_mob_500) {
+            width: 5.6rem;
+            height: 5.6rem;
+        }
     }
     &__vk {
         background-image: url(../images/vk.svg);
         background-size: 2.3rem;
+        @media (max-width: $r_mob_500) {
+            background-size: 2.6rem;
+        }
     }
     &__inst {
         background-image: url(../images/instagram.svg);
         background-size: 1.8rem;
+        @media (max-width: $r_mob_500) {
+            background-size: 2.1rem;
+        }
     }
     &__fb {
         background-image: url(../images/facebook.svg);
         background-size: 1.8rem;
+        @media (max-width: $r_mob_500) {
+            background-size: 2.1rem;
+        }
     }
 }
     @keyframes shadow {
