--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,6 +36,7 @@ body {
     background-image: url(../images/background.png);
     background-size: cover;    
     background-repeat: no-repeat;
+    overflow-x: hidden;
 }
 .header {
     max-width: 1440px;
@@ -534,7 +535,7 @@ body {
         }
         @media (max-width: $r_mob_500) {
             font-size: 3.8rem;
-            margin-top: -3rem;
+            margin-top: 0;
             font-weight: 900;
         }
         &__span {
@@ -554,7 +555,7 @@ body {
         }
         @media (max-width: $r_mob_500) {
             width: 240px;
-            margin: 0;
+            margin: 0 auto;
         }
         &_size-s {
             font-size: 1.8rem;
@@ -593,7 +594,7 @@ body {
             font-size: 1.4rem;
         }
         @media (max-width: $r_mob_500) {
-            margin-top: -2rem;
+            
             padding: 2rem 3rem;
         }  
         &:hover {
@@ -680,7 +681,7 @@ body {
                     top: 2px;
                     left: 2px;
                     border-radius: 2rem;
-                    z-index: -1;       
+                    z-index: -1;                           
                 }
             }
         }
@@ -765,6 +766,8 @@ body {
             width: 100%;
             height: 322px;            
             text-align: center;
+                @media (max-width: $r_desc_hd) {
+            height: 250px;}
         }
         &__image {            
             width: 100%;
@@ -1010,6 +1013,7 @@ body {
     }
     &__image {
         max-height: 185px;
+        height: 100%;
     }    
 }
 
@@ -1025,7 +1029,10 @@ body {
     @media (max-width: $r_tab) {
         justify-content: center;
         gap: 1rem;
-    }    
+    }  
+    @media (max-width: $r_mob_500) {
+        display: none;        
+    }   
     &__item {
         flex-basis: 230px;
         text-align: center;
@@ -1078,7 +1085,7 @@ body {
         } 
         @media (max-width: $r_mob_360) {
             font-size: 1.25rem;
-            padding: 10.7rem 0; 
+            padding: 1.7rem 0; 
             flex-basis: 110px;       
         }
     }     
@@ -1159,6 +1166,7 @@ body {
         width: 100%;
         max-width: 351px;        
         object-fit: contain;
+        height: 100%;
     }
 }
 
@@ -1313,6 +1321,9 @@ body {
             @media (max-width: $r_desc) {
                 margin-left: 0;
             }
+            @media (max-width: $r_mob_500) {
+                margin-top: 4.5rem;
+            }
         }
         &__form {
             flex-basis: 589px;
@@ -1346,7 +1357,7 @@ body {
                 justify-content: space-between;
             }
             @media (max-width: $r_mob_360) {
-                margin-top: 2rem;
+                margin-top: 1.7rem;
                 font-size: 1.5rem;
             }
             @media (max-width: $r_mob_330) {
@@ -1377,6 +1388,9 @@ body {
             @media (max-width: $r_tab) {
                 gap: 1rem;
             }
+            @media (max-width: $r_mob_500) {
+                gap: 0.5rem;
+            }
             &::before {
                 content: "";
                 background-repeat: no-repeat;
@@ -1390,13 +1404,21 @@ body {
             &::before {
             background-image: url(../images/phone.svg);
             background-size: 29px 30px;
+                @media (max-width: $r_mob_400) {
+                    background-size: 18px 20px;
+                }
             }
+            
         }
         &__mail {
             &::before {
             background-image: url(../images/mail.svg);
             background-size: 29px 30px;
+                @media (max-width: $r_mob_400) {
+                    background-size: 18px 20px;
+                }
             }
+
         }   
     }
 }
