--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -251,6 +251,7 @@ body {
     position: relative;
     padding-bottom: 187px;
     z-index: 0;
+    overflow-x: hidden;
     @media (max-width: $r_mob_500) {
         padding-bottom: 4rem;
     }
@@ -1170,6 +1171,11 @@ body {
         }
     }     
 }
+.catalog__list.category-swiper.categorySwiper.swiper-initialized.swiper-horizontal.swiper-backface-hidden {
+    overflow: hidden;
+}
+
+
 .catalog-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -1224,6 +1230,7 @@ body {
         @media (max-width: $r_mob_500) {
             font-size: 1.7rem;
             margin-top: 0;
+            text-align: center;
         }  
     }
     &__description {
